いろいろ学んだ

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
     padding: 20px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
 }
 
 h1 {
@@ -64,7 +65,6 @@ h1 {
 }
 
 #retry {
-    display: none;
     font-size: 18px;
     padding: 10px 20px;
     margin: 20px 0;
@@ -96,4 +96,6 @@ h1 {
     background-color: #fff;
     font-family: 'DotGothic16', sans-serif;
     background-color: #f0f0f0;
+    width: 100%;
+    box-sizing: border-box;
 }
